@startuml Conway's Game of Life - Class Diagram

title Diagramme de Classes - Jeu de la Vie (POO Optimal - Final)

skinparam linetype ortho
skinparam monochrome false

package "1. Modèle (Logique Métier - State Pattern)" <<Rectangle>> {

    abstract class CellState {
        + name: string
        --
        + isAlive(): bool {abstract}
        + getNextState(liveNeighbors: int, rule: RuleStrategy): CellState* {abstract}
    }

    class AliveState {
        + AliveState()
        + isAlive(): bool
        + getNextState(liveNeighbors: int, rule: RuleStrategy): CellState*
    }

    class DeadState {
        + DeadState()
        + isAlive(): bool
        + getNextState(liveNeighbors: int, rule: RuleStrategy): CellState*
    }

    CellState <|-- AliveState
    CellState <|-- DeadState

    class Cell {
        - x: int
        - y: int
        - currentState: CellState*
        --
        + Cell(x: int, y: int, initialState: CellState*)
        + setState(newState: CellState*): void
        + getState(): CellState*
        + calculateNextState(liveNeighbors: int, rule: RuleStrategy): CellState*
    }

    class Grid {
        - cells: Cell**
        - width: int
        - height: int
        - nextStateCells: CellState**
        --
        + Grid(width: int, height: int)
        + initialize(parser: InputParser): void
        + calculateLiveNeighbors(x: int, y: int): int
        + evolve(rule: RuleStrategy): bool
        + isStable(): bool
        + applyNextState(): void
        + getCell(x: int, y: int): Cell*
        + getCells(): Cell**
    }

    Cell "1" *-- "1" CellState : détient
    Grid "1" *-- "*" Cell : contient

    note top of Grid
        Implémente le calcul des voisins
        (gestion torique en extension possible ici)
        et la détection de stabilité.
    end note
}

package "2. Stratégie de Règles (Strategy Pattern)" <<Rectangle>> {
    abstract class RuleStrategy {
        + RuleStrategy(name: string)
        --
        + checkSurvival(liveNeighbors: int): bool {abstract}
        + checkBirth(liveNeighbors: int): bool {abstract}
    }

    class Rules {
        + Rules()
        + checkSurvival(liveNeighbors: int): bool
        + checkBirth(liveNeighbors: int): bool
    }

    RuleStrategy <|-- Rules
    CellState "1" o-- "1" RuleStrategy : utilise/évalue
}

package "3. Contrôleur & Utilitaires" <<Rectangle>> {
    class GameOfLife {
        - grid: unique_ptr<Grid>
        - ruleStrategy: unique_ptr<RuleStrategy>
        - view: unique_ptr<IView>
        - maxIterations: int
        --
        + GameOfLife(configFilePath: string, view: unique_ptr<IView>)
        + runSimulation(): void
    }

    class InputParser {
        + parseEvolution(fileName: string): bool
        + getGridWidth(): int
        + getGridHeight(): int
        + getMaxIterations(): int
        + getRuleName(): string
        + getInitialGridData(): vector<vector<int>>
    }

    class GameLogger {
        + logState(grid: Grid, iteration: int): void
    }

    GameOfLife "1" *-- "1" Grid : gère
    GameOfLife "1" *-- "1" RuleStrategy : utilise
}

package "4. Vue (Séparation I/O)" <<Rectangle>> {
    interface IView {
        + initialize(width: int, height: int): void {abstract}
        + renderGrid(grid: Grid, iteration: int): void {abstract}
        + handleEvents(): bool {abstract}
        + updateDisplay(): void {abstract}
        + waitForExit(): void {abstract}
    }

    class ConsoleView {
        + renderGrid(grid: Grid, iteration: int): void
        + handleEvents(): bool
        + updateDisplay(): void
        + waitForExit(): void
    }

    class SFMLView {
        + renderGrid(grid: Grid, iteration: int): void
        + handleEvents(): bool
        + updateDisplay(): void
        + waitForExit(): void
        - window: sf::RenderWindow
    }
    
    ' Ajout explicite des flèches d'héritage
    IView <|-- ConsoleView
    IView <|-- SFMLView

    GameOfLife "1" o-- "1" IView : utilise (polymorphisme)
    ConsoleView .right.> GameLogger : utilise
}

InputParser .right.> Grid : crée/initialise

@enduml